resources/sass/user.scss
/* ... */
.card-task {
    .text-truncate {
      display: inline-block;
      max-width: 400px;
  }
}

a.card{
  &:hover {
      box-shadow: 0 1px 2px 0 transparentize($dark, .5);
    }
  margin: $spacer/4;
}

.scrollable-list {
  .card-list {
      padding-right: 0;
    }
}

.card-list-header {
    padding-left: 0.5rem;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

.card-kanban{
    &:hover {
        box-shadow: 0 1px 10px 0 transparentize($dark, .5);
      }
    margin: $spacer/4;
}

.kanban-col{
    &:not(:hover){
    .card-list-footer{
        opacity: 0;
    }
    }
}

.card-info {
    min-width: 140px;
    .card-body {
        padding: $spacer*.45;
    }
}

//dashboard info cards
.card-body .number {
    float: left;
}

.card-body .number h3 {
    margin: 0 0 2px;
    padding: 0;
    font-size: 30px;
    font-weight: 400
}

.card-body .number h3>small {
    font-size: 23px
}

.card-body .number small {
    font-size: 14px;
    color: #AAB5BC;
    font-weight: 600;
    text-transform: uppercase
}

.card-body .icon {
    float: right;
    padding: 3px 0 0
}

.card-body .icon>i {
    color: #cbd4e0;
    font-size: 26px
}

//dashboard timeline
ol.timeline {
    list-style-type: none;
    position: relative;
    padding-left: 1.5rem;
}
ol.timeline:before {
    content: ' ';
    background: #d4d9df;
    color: $border-color;
    display: inline-block;
    position: absolute;
    left: 4px;
    width: 1px;
    height: 100%;
    z-index: 400;
}
ol.timeline > li {
    margin: 20px 0;
    padding-left: 0;
}
ol.timeline > li:before {
    content: ' ';
    background: white;
    display: inline-block;
    position: absolute;
    border-radius: 50%;
    border: 2px solid $border-color;
    left: 0;
    width: 9px;
    height: 9px;
    z-index: 400;
}

//price ribbon
.card .price-ribbon {
    position: absolute;
    top: 75px;
    right: -35px;
    width: 90px;
    font-size: 14px;
    text-transform: uppercase;
    font-weight: 400;
    padding: 6px 20px 6px 15px;
    color: #fff;
    background-color: $blue;
    text-shadow: 0 1px 2px #bbb;
    -webkit-box-shadow: 0 2px 4px #888;
    -moz-box-shadow: 0 2px 4px #888;
    box-shadow: 0 2px 4px #888
}

.card .price-ribbon:after {
    content: ' ';
    position: absolute;
    width: 0;
    height: 0;
    right: 0;
    top: 100%;
    border-width: 5px 10px;
    border-style: solid;
    border-color:$gray-600 transparent transparent $gray-600
}

.colorinput {
    margin: 0;
    position: relative;
    cursor: pointer;
}

.colorinput-input {
    position: absolute;
    z-index: -1;
    opacity: 0;
}

.colorinput-color {
    background-color: #fdfdff;
    border-color: #e4e6fc;
    border-width: 1px;
    border-style: solid;
    display: inline-block;
    width: 2.75rem;
    height: 2.75rem;
    border-radius: 3px;
    color: #fff;
    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
}

.colorinput-color:before {
        content: '';
        opacity: 0;
        position: absolute;
        top: 0.70rem;
        left: 0.75rem;
        height: 1.25rem;
        width: 1.25rem;
        transition: .3s opacity;
      background: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E") no-repeat center center/50% 50%;
}

.colorinput-input:checked ~ .colorinput-color:before {
    opacity: 1;
}


//Sort & filter
.filter-container {
    a {
        text-decoration: none;
    }

    padding-left: 2rem;
    padding-right: 2rem;
    justify-content: center;
    margin: 0 0;
    margin-bottom: $spacer/4;
}

@include media-breakpoint-down(sm) {
  .filter-container{
    margin: 0 auto;
  }
}


.filter-controls {
    display: flex;
    align-items: baseline;
    margin-right: .5rem;

    > * {
      margin-right: .5rem;
      color: inherit;
      transition: all .2s ease;
    }
    a:hover {
      color: $gray-600;
    }
    .order {
      display: flex;
      align-items: flex-end;
      border-radius: 1rem;
      border: 1px solid $border-color;
      background: transparent;
      padding: .2rem .6rem .2rem .6rem;
      font-size: .9rem;

      &:after {
        display: block;
        opacity: 0;
        content: '';
        margin-left: 0;
        font-family: 'Material Icons';
        font-weight: 400;
        font-style: normal;
        font-size: 1.5rem;
        display: inline-block;
        line-height: 1;
        text-transform: none;
        letter-spacing: normal;
        word-wrap: normal;
        white-space: nowrap;
        direction: ltr;
        -webkit-font-smoothing: antialiased;
        text-rendering: optimizeLegibility;
        -moz-osx-font-smoothing: grayscale;
        font-feature-settings: 'liga';
      }
      &.asc, &.desc {
        color: $gray-600;
        font-weight: 600;
        border: 1px solid $gray-600;
        background: transparent;
      }
      &.asc:after {
        opacity: 1;
        content: 'arrow_drop_down';
      }
      &.desc:after {
        opacity: 1;
        content: 'arrow_drop_up';
      }
      &:hover
      {
        color: $gray-600;
        border: 1px solid $gray-600;
        background: transparent;
        font-weight: 600;
      }
    }
  }
/* ... */

